Refactor and clean up core game code
Large refactor and cleanup across core plugin code: introduce named constants for delays, thresholds and timings; Englishify/javadoc-style comments and method names for clarity; improve safety (timeouts, health/tab refresh, world/reset constants); simplify combat/axe damage logic; restructure ResourceRush to use sets/LinkedHashSet for correctness; move AdminSlots to utils and update tests; consolidate episode selector UI builder; tidy many small naming/formatting/logic issues (Scoreboard, Skins, TAB, UpdateChecker, Time/Text utils). These changes improve readability, determinism and runtime stability.